--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.4.0",
+    "mongodb": "^4.9.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
