--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/Arun-Raj-B/Expo-store-Project-1#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
     "mongodb": "^4.9.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nocache": "^3.0.4"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
