--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
+    "fast-two-sms": "^3.0.0",
     "mongodb": "^4.9.1",
     "morgan": "^1.10.0",
     "nocache": "^3.0.4"
