--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.20"
   }
 }
